# test_vk

./: CMakeLists.txt  README.md
src/: main.cpp  min_dist.cpp  min_dist.h
tests/: CMakeLists.txt  tests_min_dist.cpp
